--- a/source/_posts/为什么要使用加密货币支付.md
+++ b/source/_posts/为什么要使用加密货币支付.md
@@ -17,7 +17,7 @@ categories: 加密货币
 
 ​	说在前面，由于许多加密货币交易所都有KYC(Know your customer)认证服务，就是简称的实名认证。许多人又问了，那根本没有匿名啊，该找到你还是找到你。对的，该找到你还是找到你，但是找隔壁老王跟找躲在俄罗斯某处的扣脚恋童大叔的难易程度是一样的吗，加密货币不能保证完全匿名，但是能增加匿名性，让找到你的难度大大增加。下面以一个我们购买机场翻墙服务器为例
 
-![](../images/Cryptocurrency/payment.png)
+![](/images/Cryptocurrency/payment.png)
 
 一般的机场会提供前面两种支付方式：支付宝和微信，但是好的机场会提供加密货币，例如**USDT(一种稳定加密货币，跟美元有1:1挂钩，特别适合用来交易)**之类的
 
